# LilaBred2

./: main.html
LilaBred_bot/: .gitignore  Dockerfile  create_bot.py  main.py  pyproject.toml  settings.py
LilaBred_bot/handlers/: __init__.py  client.py  keyboard.py  text_contacts.py  text_courses.py  to_fsm.py
circles/: index.html
circles/css/: view.css
css/: desctop.css  mobile1.css
js/: circles.js  scripts.js
web/: main.html
web/css/: desctop.css  mobile1.css
